--- a/assembly.html
+++ b/assembly.html
@@ -207,7 +207,7 @@
         </p>
 
         <figure>
-          <img src="Fig3.1" alt="Cartoon of an assembly graph." />
+          <img src="Fig3.1.png" alt="Cartoon of an assembly graph." />
           <figcaption>Figure 3.1 – Cartoon of assembly process.</figcaption>
         </figure>
 
@@ -245,7 +245,7 @@ spades.py \
         <p>SPAdes writes contigs, scaffolds, graphs, and logs into <code>spades-output/</code>.</p>
 
         <figure>
-          <img src="Fig3.2" alt="Example SPAdes assembly graph." />
+          <img src="Fig3.2.png" alt="Example SPAdes assembly graph." />
           <figcaption>Figure 3.2 – Example SPAdes graph (placeholder).</figcaption>
         </figure>
       </section>
