--- a/assembly.html
+++ b/assembly.html
@@ -230,7 +230,8 @@ spades.py \
   -o assemblies/spades-illumina-chr2-k77/ \
   -k 77 \
   -t 4 \
-  -m 8
+  -m 8 \ 
+  --isolate
 </div>
 
         <table>
