--- a/reads.html
+++ b/reads.html
@@ -593,7 +593,7 @@ CCTGCCTGACAAAACCCCACCCCAAGCACAACCTGCACTCAAACACAGGTGATGA
 
           <p>
             As a quick example, the first quality character in the first read above is
-            <code>9</code>. In the ASCII table, <code>A</code> has decimal code 73. The
+            <code>9</code>. In the ASCII table, <code>9</code> has decimal code 57. The
             corresponding Phred score is:
           </p>
 
