--- a/terminology.html
+++ b/terminology.html
@@ -345,13 +345,13 @@
             <tr>
               <td class="term-col">Sequence libraries</td>
               <td class="def-col">
-                A sample of DNA that has been processed to be sequenced.
+                Genetic material that has been prepared to be sequenced.
               </td>
             </tr>
             <tr>
               <td class="term-col">Reads</td>
               <td class="def-col">
-                Fragmented and overlapping pieces of a DNA strand that are sequenced.
+                Fragmented and overlapping pieces of a DNA strand that have been sequenced.
               </td>
             </tr>
             <tr>
