--- a/workshop.html
+++ b/workshop.html
@@ -418,7 +418,7 @@
 
           <figure>
             <img
-              src="https://gwct.bio/congen/assembly/img/congen-interface.png"
+              src="Fig1.1.png"
               alt="Screenshot of the RStudio Server interface with the bash terminal and file browser highlighted."
             />
             <figcaption>
