--- a/reads.html
+++ b/reads.html
@@ -678,7 +678,7 @@ fastqc T_deckeni_reads/illumina/SRR31758803-chr2_1.fastq.gz \
           </p>
 
           <figure>
-            <img src="placeholder.png" alt="Screenshot of RStudio interface showing FastQC HTML output files in the file browser." />
+            <img src="Fig2.2.png" alt="Screenshot of RStudio interface showing FastQC HTML output files in the file browser." />
             <figcaption>
               Figure 2.2 – Viewing FastQC HTML output files in the RStudio Server file
               browser.
