--- a/reads.html
+++ b/reads.html
@@ -707,7 +707,7 @@ fastqc T_deckeni_reads/illumina/SRR31758803-chr2_1.fastq.gz \
           <p>
             In our example, FastQC reports hundreds of thousands of reads with an expected
             length distribution (in this case, 150 bp) and no reads flagged as globally poor
-            quality. That’s exactly what we’d hope to see for good hornbill data as well.
+            quality. That’s exactly what we’d hope to see for good data.
           </p>
 
           <p>
