--- a/assembly.html
+++ b/assembly.html
@@ -271,7 +271,7 @@ flye \
 </div>
 
         <p>
-          Flye produces <code>assembly.fasta</code>, logs, and graph files inside <code>flye-output/</code>.
+          Flye produces <code>assembly.fasta</code>, logs, and graph files inside <code>flye-pacbio/</code>.
         </p>
       </section>
 
