--- a/assembly.html
+++ b/assembly.html
@@ -120,6 +120,22 @@
       white-space: pre-wrap; color: #065f46;
       box-shadow: 0 3px 8px rgba(0,0,0,0.08);
     }
+    .code-block-red {
+      background: #fee2e2;
+      border: 1px solid #fca5a5;
+      border-radius: 12px;
+      padding: 1rem 1.25rem;
+      margin: 1.25rem auto;
+      display: block;
+      width: fit-content;
+      max-width: 100%;
+      font-family: ui-monospace, Menlo, Monaco, Consolas, "Courier New", monospace;
+      font-size: 1rem;
+      color: #991b1b;
+      text-align: center;
+      white-space: pre-wrap;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
+    }
     .code-block { background: #111827; color: #f9fafb;
       border-radius: 10px; padding: 0.6rem 0.9rem;
       margin: 0.7rem 0; font-family: monospace; }
