--- a/assembly.html
+++ b/assembly.html
@@ -280,9 +280,9 @@ spades.py \
 
 <div class="code-block-red">
 flye \
-  --pacbio-hifi pacbio_Tdeckeni_chr2_subsample.fastq.gz  \
+  --pacbio-hifi T_deckeni_reads/pacbio/pacbio_Tdeckeni_chr2_subsample.fastq.gz \
   --genome-size 0.08 \
-  --out-dir assemblies/flye-pacbio \
+  --out-dir assemblies/flye-pacbio-chr2 \
   --threads 4
 </div>
 
