--- a/assembly.html
+++ b/assembly.html
@@ -376,7 +376,7 @@ Here are some important statistics to consider when assessing a fragmented assem
     </tbody>
   </table>
    <p>
-  N50 can be a little tricky to understand, luckily the Molecular Ecologist blog has a simple
+  <strong>N50</strong>strong> can be a little tricky to understand, luckily the Molecular Ecologist blog has a simple
   explainer post, that has the following figure:
    </p>
 
@@ -387,7 +387,7 @@ Here are some important statistics to consider when assessing a fragmented assem
     </figcaption>
   </figure>
  <p>
-  L90 is similar, but using number of scaffolds instead of scaffold length.
+  <strong>L90</strong>strong> is similar, but using number of scaffolds instead of scaffold length.
  </p>
  <p>
 These statistics are relatively easy to calculate, but there are also tools that can summarize 
@@ -399,7 +399,7 @@ statistics about our genome assemblies.
 </p>
 <p>
 Instead of using the assembly we just produced, which is only of a single chromosome, 
-we've provided several T. deckeni genomes to compare in the expected-outputs/assemblies/ 
+we've provided several <em>T. deckeni</em> genomes to compare in the expected-outputs/assemblies/ 
 folder. Let's run the assemblathon script on one of them:
 </p>
 <div class="code-block-green">
