--- a/assembly.html
+++ b/assembly.html
@@ -403,10 +403,35 @@ Instead of using the assembly we just produced, which is only of a single chromo
 we've provided several <em>T. deckeni</em> genomes to compare in the <strong>expected-outputs/assemblies/</strong>
 folder. Let's run the <strong>assemblathon</strong> script on one of them:
 </p>
-<div class="code-block-green"> perl /usr/bin/assemblathon_stats.pl /
+
+<div class="code-block-green">perl /usr/bin/assemblathon_stats.pl /
 expected-outputs/assemblies/hifiasm-pacbio-chr2.bp.hap1.p_ctg.fa > /
 quality-control/hifiasm-pacbio-chr2.bp.hap1.p_ctg-assemblathon.txt
 </div>
+
+<p>
+This should produce the file <strong>quality-control/hifiasm-pacbio-chr2.bp.hap1.p_ctg-assemblathon.txt</strong> which contains several statistics about the assembly
+</p>
+<p>
+Let's take a look at this file:
+</p>
+
+<div class="code-block-green">less -S quality-control/hifiasm-pacbio-chr2.bp.hap1.p_ctg-assemblathon.txt
+</div>
+
+<p>This should display a nice table of statistics</p>
+
+We know that <em>T. deckeni</em> has a genome size of roughly 1.2Gb that should be distributed across approximately 40 chromosomes. 
+So the assembly size of XXX is about right, but we've only been able to resolve XX scaffolds. No where near the 40 chromosomes we
+would ideally want. Such a fragmented assembly could make annotation difficult with genes likely being split between scaffolds, 
+and analysis of structural variation impossible.
+
+What about some other assemblies? We've provided several more assemblies of <em>T. deckeni</em> in the <strong>expected-outputs/assemblies/</strong> 
+folder, including a SPAdes assembly with long reads (PacBio + Nanopore), a Flye assembly with just PacBio reads and a Flye assembly 
+with just Nanopore reads. The assemblathon output files are there as well, but the statistics we've talked about are summarized in 
+the following table, as well as the latest published D. pseudoobscura genome on the SRA:
+
+
 </section>
 
       <!-- COMPLEASM -->
