--- a/assembly.html
+++ b/assembly.html
@@ -448,15 +448,19 @@ Let's take a look at this file:
 
 <p>This should display a nice table of statistics</p>
 
+<div class="code-block-blue">
+  
+</div>
+<p>
 We know that <em>T. deckeni</em> has a genome size of roughly 1.2Gb that should be distributed across approximately 40 chromosomes. 
 So the assembly size of XXX is about right, but we've only been able to resolve XX scaffolds. No where near the 40 chromosomes we
 would ideally want. Such a fragmented assembly could make annotation difficult with genes likely being split between scaffolds, 
-and analysis of structural variation impossible.
+and analysis of structural variation impossible.</p>
 
-What about some other assemblies? We've provided several more assemblies of <em>T. deckeni</em> in the <strong>expected-outputs/assemblies/</strong> 
+<p>What about some other assemblies? We've provided several more assemblies of <em>T. deckeni</em> in the <strong>expected-outputs/assemblies/</strong> 
 folder, including a SPAdes assembly with long reads (PacBio + Nanopore), a Flye assembly with just PacBio reads and a Flye assembly 
 with just Nanopore reads. The assemblathon output files are there as well, but the statistics we've talked about are summarized in 
-the following table, as well as the latest published D. pseudoobscura genome on the SRA:
+the following table, as well as the latest published D. pseudoobscura genome on the SRA:</p>
 
 
 </section>
